# church-sound-meter

./: .gitignore  CMakeLists.txt  README.md  build-macos.sh  build.sh  qml.qrc
.github/workflows/: build.yml
icons/: AppIcon.icns
qml/: About.qml  Chart.qml  ChartProperties.qml  Generator.qml  ModalDialog.qml  PropetiesBar.qml  SideBar.qml  SourceLayout.qml  Theme.qml  main.qml
qml/menu/: Top.qml
qml/source/: Source.qml
src/: main.cpp
src/chart/: palette.cpp
src/chart/opengl/: spectrogramseriesrenderer.cpp
